# TerraFusionProf

./: .gitignore  .replit  CONTRIBUTING.md  README.md  docker-compose.yml  import-all-apps.sh  lerna.json  nx.json  package-lock.json  package.json  smoke-test.sh  workspace.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  main.yml
.nx/workspace-data/: file-map.json  lockfile.hash  parsed-lock-file.json  project-graph.json  source-maps.json
apps/bcbscostapp/: index.js  package.json
apps/bcbsdataengine/: index.js  package.json
apps/bcbsgeoassessmentpro/: index.js  package.json
apps/bcbsgispro/: index.js  package.json
apps/bcbslevy/: index.js  package.json
apps/bcbspacsmapping/: index.js  package.json
apps/bcbswebhub/: index.js  package.json
apps/bsbcmaster/: index.js  package.json
apps/bsincomevaluation/: index.js  package.json
apps/core-gateway/: package.json
apps/geoassessmentpro/: index.js  package.json
apps/terraagent/: index.js  package.json
apps/terraf/: index.js  package.json
apps/terraflow/: index.js  package.json
apps/terrafusion_mock-up/: index.js  package.json
apps/terrafusionpro/: index.js  package.json
apps/terrafusionsync/: index.js  package.json
apps/terralegislativepulsepub/: index.js  package.json
apps/terraminer/: index.js  package.json
assets/styles/: global.css
attached_assets/: Pasted--React-File-Upload-Dropzone-Progress-Bar-Syncfusion-https-tse3-mm-bing-net-th-id-OIP-eZhDHFy-1745712955275.txt  Pasted--Summary-To-automate-the-full-integration-verification-and-deployment-of-your-TerraFusion-pla-1745615410652.txt  Pasted-All-HTTP-000000-responses-mean-cURL-couldn-t-connect-to-your-health-check-endpoints-typically-becaus-1745625051422.txt  Pasted-Here-s-a-single-god-tier-prompt-you-can-paste-straight-into-your-Replit-AI-Agent-session-to-scaffo-1745546181801.txt  Pasted-Here-s-exactly-what-to-do-next-to-get-those-apps-running-and-hooked-into-your-core-gateway--1745615080874.txt  Pasted-Right-let-s-fold-repo-creation-into-the-bootstrapping-Here-s-an-updated-prompt-you-can-drop-into-yo-1745546258535.txt
docs/: architecture.md  deployment.md
docs/api/: README.md  reference.md
docs/architecture/: README.md
docs/deployment/: kubernetes.md
docs/development/: README.md
docs/services/: overview.md
docs/user-guides/: README.md
infrastructure/ci-cd/: README.md
infrastructure/docker/: README.md
infrastructure/helm/: Chart.yaml  README.md  deploy.sh  values-dev.yaml  values-production.yaml  values-staging.yaml  values.yaml
infrastructure/kubernetes/: README.md  (+1 more)
realapp/: index.html  index.js
scripts/: add-health-endpoints.js  deploy.js  setup.sh  start-all.js
terra_fusion_pro/: Cargo.toml
terra_fusion_pro/.github/workflows/: ci.yml
terra_fusion_pro/config/: default.toml  development.toml  production.toml
terra_fusion_pro/k8s/: api-gateway.yaml  apollo-gateway.yaml  database.yaml  property-service.yaml  secrets.yaml  user-service.yaml  web-client.yaml
terra_fusion_pro/migrations/: 20230501000001_create_users_table.sql
terra_fusion_pro/services/analysis_service/: Cargo.toml
terra_fusion_pro/services/form_service/: Cargo.toml
terra_fusion_pro/services/property_service/: Cargo.toml
terra_fusion_pro/services/property_service/src/: main.rs
terra_fusion_pro/services/property_service/src/api/: mod.rs  property_controller.rs
terra_fusion_pro/services/property_service/src/graphql/: mod.rs  mutation.rs  query.rs  types.rs
terra_fusion_pro/services/property_service/src/repository/: property_repository.rs
terra_fusion_pro/services/property_service/src/service/: mod.rs  property_service.rs
terra_fusion_pro/services/report_service/: Cargo.toml
terra_fusion_pro/services/user_service/: Cargo.toml
terra_fusion_pro/services/user_service/src/: main.rs
terra_fusion_pro/services/user_service/src/api/: mod.rs  user_controller.rs
terra_fusion_pro/services/user_service/src/auth/: auth_controller.rs  mod.rs
terra_fusion_pro/services/user_service/src/graphql/: mod.rs  mutation.rs  query.rs  types.rs
terra_fusion_pro/services/user_service/src/repository/: mod.rs
terra_fusion_pro/services/user_service/src/service/: user_service.rs
terra_fusion_pro/shared/: Cargo.toml
terra_fusion_pro/shared/src/: config.rs  db.rs  error.rs  lib.rs
terra_fusion_pro/shared/src/auth/: jwt.rs  middleware.rs  mod.rs  replit_auth.rs  service_middleware.rs  session.rs
terra_fusion_pro/shared/src/models/: appraisal.rs  form.rs  mod.rs  property.rs  report.rs  user.rs
terra_fusion_pro/shared/src/repository/: user_repository.rs
terra_fusion_pro/shared/src/utils/: config_loader.rs  datetime.rs  format.rs  jwt.rs  logging.rs  mod.rs  validation.rs
terra_fusion_pro/web_client/: Cargo.toml
(+57 files in other folders)
