[package]
name = "terra_fusion_pro"
version = "0.1.0"
edition = "2021"
description = "A cutting-edge real estate appraisal platform"
authors = ["TerraFusion Team"]

[workspace]
members = [
    "services/api_gateway",
    "services/property_service",
    "services/user_service",
    "services/report_service",
    "services/form_service",
    "services/analysis_service",
    "shared",
    "web_client"
]

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
dotenv = "0.15.0"
config = "0.13.3"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
