[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "Shared utilities and models for TerraFusionPro platform"
authors = ["TerraFusion Team"]

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid"] }
tokio = { version = "1.28.0", features = ["full"] }
log = "0.4.17"
thiserror = "1.0.40"
async-trait = "0.1.68"
validator = { version = "0.16.0", features = ["derive"] }
regex = "1.8.1"
