[package]
name = "property_service"
version = "0.1.0"
edition = "2021"
description = "Property management service for TerraFusionPro real estate appraisal platform"
authors = ["TerraFusion Team"]

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
async-trait = "0.1.68"
validator = { version = "0.16.0", features = ["derive"] }
shared = { path = "../../shared" }
thiserror = "1.0.40"
async-graphql = { version = "5.0.7", features = ["chrono", "uuid"] }
async-graphql-actix-web = "5.0.7"
reqwest = { version = "0.11.17", features = ["json"] }
config = "0.13.3"
